--- a/public/assets/scss/layout/_services.scss
+++ b/public/assets/scss/layout/_services.scss
@@ -27,7 +27,7 @@
 
     &__content {
         padding: 40px;
-        padding-top: 0;
+        padding-top: 20px;
         box-shadow: 0px 16px 32px 0px rgba(0, 0, 0, 0.06);
         background: #fff;
         position: relative;
@@ -54,6 +54,7 @@
 
     &__title {
         font-size: 24px;
+
     }
 
     &__btn {
