--- a/public/assets/scss/layout/_slider.scss
+++ b/public/assets/scss/layout/_slider.scss
@@ -38,6 +38,7 @@
         top: 0;
         left: 0;
         width: 100%;
+        opacity: 40%;
         height: 100%;
         z-index: -1;
         background-image: url(../../img/slider/blur.png);
