--- a/public/assets/scss/layout/_slider.scss
+++ b/public/assets/scss/layout/_slider.scss
@@ -205,6 +205,7 @@
 .slick-active .tp-slider-content p {
     -webkit-animation-delay: 0.7s;
     animation-delay: 0.7s;
+    color: white;
     -webkit-animation-duration: 0.7s;
     animation-duration: 0.7s;
 }
@@ -419,7 +420,7 @@
     width: 100%;
     height: 100%;
     background-blend-mode: overlay;
-    background-color: rgba(42, 142, 92, 0.29);
+    background-color: rgb(42 142 92 / 68%);
     z-index: 999;
 
     @media (max-width: 768px) {
